-------------
 7.x-1.0-dev
-------------
- #1429988: Add conditionals due to the fact that rules may break in the event that
  form elements are limited due to a more restricted user role.

-------------
 7.x-1.0-rc1
-------------
 - #1429954 by jordojuice: Write test cases for all forms, conditions, and actions.
 - Fixed inconsistencies in naming of some rules.

---------------
 7.x-1.0-beta8
---------------
- #766826 patch by jordojuice: Add condition: Field value has changed.
- #1429558 patch by jordojuice: Redesign the way form elements are evaluated and reset.
- #1429558 patch by jordojuice: Select lists being improperly filtered out of actions.
- Improved the 'Set default value' action to provide a value field based on the field type.
- #1429700 patch by jordojuice: Element inspection descriptions are displayed in vertical
  tabs instead of near the form element itself when the element is in vertical tabs.

---------------
 7.x-1.0-beta7
---------------
- #1383188 patch by mrfelton: Improvements for the "Set multiple value element options"
  action. Added a method for setting key|value pairs.
- #1249694 by jordojuice: Improve usability of element ID system. Added a method of
  selecting form elements from within the Rules interface.
- #1428020 by jordojuice: Remove the "Create a new form element" action.
- #1261806 by jordojuice: Add a user interface to support the new interface for form
  element attributes. This is an aid to help users determine what settings exist on
  specific form elements via the interface and to identify form elements.
- #1429072: Backport changes to 1.x.
- #1429090: Redirect user to activated form upon intial activation of form events.
  Also cleaned up the interface of the set weight action.
- #1429108: Fixed invalid argument being passed to the Set multiple options action.
- #1361926 by jordojuice: Redirect action not working in certain cases. This action
  was redesigned to work faster and is much more reliable.