@@ -2,20 +2,27 @@
 
 class RulesFormsTestCase extends DrupalWebTestCase {
 
+  /**
+   * Provides a user with permissions to administer rules forms.
+   */
   protected $privileged_user;
 
+  /**
+   * Defines test information.
+   */
   public static function getInfo() {
     return array(
-      'name' => 'Rules forms tests',
-      'description' => 'Tests the Rules forms interface and rules.',
+      'name' => 'Form activation and interface',
+      'description' => 'Tests the administrative interface and form event activation process.',
       'group' => 'Rules forms',
     );
   }
 
+  /**
+   * Sets up the test.
+   */
   public function setUp() {
     parent::setUp('rules_forms', 'rules');
-    RulesLog::logger()->clear();
-    variable_set('rules_debug_log', 1);
     $this->privileged_user = $this->drupalCreateUser(array(
       'administer nodes',
       'access content',
@@ -26,19 +33,10 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->drupalLogin($this->privileged_user);
   }
 
-  private function enableNodeForm() {
-    $this->drupalGet(RULES_FORMS_ADMIN_PATH);
-    $edit = array();
-    $edit['enable_form_activation_message'] = 1;
-    $this->drupalPost(RULES_FORMS_ADMIN_PATH, $edit, t('Save settings'));
-    $this->drupalGet('node/add/article');
-    $this->clickLink('article_node_form');
-    $edit = array();
-    $edit['form_id_label'] = 'Article node form';
-    $this->drupalPost('admin/config/workflow/rules/forms/article_node_form/activate/node%25252Fadd%25252Farticle', $edit, t('Activate'));
-  }
-
-  public function testInterface() {
+  /**
+   * Tests the administrative interface.
+   */
+  public function testFormActivation() {
     $this->drupalGet(RULES_FORMS_ADMIN_PATH);
     $this->assertNoText(t('Forms where events are activated'), t('No forms are activated yet.'));
     $this->assertNoText(t('Form elements'));
@@ -91,36 +89,202 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertNoFieldChecked('edit-enable-form-activation-message');
   }
 
+}
+
+/**
+ * Base class for testing Rules Forms rules.
+ */
+class RulesFormsRulesTestCase extends DrupalWebTestCase {
+  
+  /**
+   * Provides a user with permissions to administer rules forms.
+   */
+  protected $privileged_user;
+
+  /**
+   * A test form for passing as an argument in events.
+   */
+  protected static $_form = array(
+    '#id' => 'article_node_form',
+    'title' => array(
+      '#type' => 'textfield',
+      '#title' => 'test title',
+      '#default_value' => 'tset',
+    ),
+    'body' => array(LANGUAGE_NONE => array(array(
+      '#type' => 'textarea',
+      '#title' => 'test body',
+      '#default_value' => 'tset body',
+    ))),
+    'fieldset' => array(
+      '#type' => 'fieldset',
+      '#title' => 'test fieldset',
+      'select' => array(
+        '#type' => 'select',
+        '#title' => 'tset select',
+        '#options' => array('first' => 'option1', 'second' => 'option2'),
+      ),
+      'checkboxes' => array(
+        '#type' => 'checkboxes',
+        '#title' => 'test checkboxes',
+        '#options' => array('frist' => '1option', 'sceond' => '2option'),
+      ),
+    ),
+  );
+
+  /**
+   * A test form state array for passing as an argument in events.
+   */
+  protected static $_form_state = array(
+    'values' => array(
+      'title' => 'tset',
+      'body' => 'tset body',
+    ),
+  );
+
+  /**
+   * Defines a form ID for a form whose events are activated in tests.
+   */
+  protected static $_form_id = 'article_node_form';
+
+  /**
+   * Sets up the test.
+   */
+  public function setUp() {
+    parent::setUp('rules_forms', 'rules');
+    $this->privileged_user = $this->drupalCreateUser(array(
+        'administer nodes',
+        'access content',
+        'create article content',
+        'administer rules forms rules',
+        'administer rules forms',
+    ));
+    $this->drupalLogin($this->privileged_user);
+  }
+  
+  /**
+   * Enables form events for the node add form via the interface.
+   */
+  protected function _enableNodeForm() {
+    $this->drupalGet(RULES_FORMS_ADMIN_PATH);
+    $edit = array();
+    $edit['enable_form_activation_message'] = 1;
+    $this->drupalPost(RULES_FORMS_ADMIN_PATH, $edit, t('Save settings'));
+    $this->drupalGet('node/add/article');
+    $this->clickLink('article_node_form');
+    $edit = array();
+    $edit['form_id_label'] = 'Article node form';
+    $this->drupalPost('admin/config/workflow/rules/forms/article_node_form/activate/node%25252Fadd%25252Farticle', $edit, t('Activate'));
+  }
+
+}
+
+/**
+ * Tests Rules Forms conditions.
+ */
+class RulesFormsConditionsTestCase extends RulesFormsRulesTestCase {
+
+  /**
+   * Defines test information.
+   */
+  public static function getInfo() {
+    return array(
+      'name' => 'Rules forms conditions',
+      'description' => 'Tests Rules forms condition callbacks.',
+      'group' => 'Rules forms',
+    );
+  }
+
+  /**
+   * Enables modules and logs in the privileged user.
+   */
+  public function setUp() {
+    parent::setUp();
+  }
+
+  /**
+   * Tests callback for Condition: Element has value.
+   */
   public function testElementValueCondition() {
     // Test the condition with a regular value in the field.
     $form = array();
-    $form['test'] = array('#type' => 'textfield', '#value' => 'tset');
-    $form = new ArrayObject($form);
+    $test_form['test'] = array('#type' => 'textfield', '#value' => 'tset', '#default_value' => 'tset');
+    $form = new ArrayObject($test_form);
     $form_state = new ArrayObject(array());
 
-    $condition1 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => 'tset'));
+    // Test with a correctly matching field value.
+    $condition1 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => 'tset', 'regex' => 0));
     $result1 = $condition1->executeByArgs(array('form' => $form, 'form_state' => $form_state));
     $this->assertTrue($result1, t('Element values are equal.'));
 
-    $condition2 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => 'test'));
+    // Test with an incorrectly matching field value.
+    $condition2 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => 'test', 'regex' => 0));
     $result2 = $condition2->executeByArgs(array('form' => $form, 'form_state' => $form_state));
     $this->assertFalse($result2, t('Element values are not equal.'));
 
-    // Test the condition with a default value in the field.
-    $form = array();
-    $form['test'] = array('#type' => 'textfield', '#default_value' => 'tset');
-    $form = new ArrayObject($form);
-    $form_state = new ArrayObject(array());
-    
-    $condition1 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => 'tset'));
-    $result1 = $condition1->executeByArgs(array('form' => $form, 'form_state' => $form_state));
-    $this->assertTrue($result1, t('Element values are equal.'));
-    
-    $condition2 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => 'test'));
-    $result2 = $condition2->executeByArgs(array('form' => $form, 'form_state' => $form_state));
-    $this->assertFalse($result2, t('Element values are not equal.'));
+    // Test with a correctly matching regular expression.
+    $condition3 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => '/se/', 'regex' => 1));
+    $result3 = $condition3->executeByArgs(array('form' => $form, 'form_state' => $form_state));
+    $this->assertTrue($result3, t('Regular expression evaluation: value is equal.'));
+
+    // Test with a correctly matching regular expression.
+    $condition4 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => '/es/', 'regex' => 1));
+    $result4 = $condition4->executeByArgs(array('form' => $form, 'form_state' => $form_state));
+    $this->assertFalse($result4, t('Regular expression evaluation: value is not equal.'));
+
+    // Test the condition with only a default value in the field.
+    unset($test_form['test']['#value']);
+    $form = new ArrayObject($test_form);
+
+    // Test with a correctly matching default field value.
+    $condition5 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => 'tset', 'regex' => 0));
+    $result5 = $condition5->executeByArgs(array('form' => $form, 'form_state' => $form_state));
+    $this->assertTrue($result5, t('Element values are equal.'));
+
+    // Test with an incorrectly matching default field value.
+    $condition6 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => 'test', 'regex' => 0));
+    $result6 = $condition6->executeByArgs(array('form' => $form, 'form_state' => $form_state));
+    $this->assertFalse($result6, t('Element values are not equal.'));
+
+    // Test with a correctly matching regular expression default value.
+    $condition7 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => '/se/', 'regex' => 1));
+    $result7 = $condition7->executeByArgs(array('form' => $form, 'form_state' => $form_state));
+    $this->assertTrue($result7, t('Regular expression evaluation: value is equal.'));
+
+    // Test with a correctly matching regular expression.
+    $condition8 = rules_condition('rules_forms_element_value', array('element' => 'textfield:test', 'value' => '/es/', 'regex' => 1));
+    $result8 = $condition8->executeByArgs(array('form' => $form, 'form_state' => $form_state));
+    $this->assertFalse($result8, t('Regular expression evaluation: value is not equal.'));
   }
 
+}
+
+/**
+ * Tests Rules Forms actions.
+ */
+class RulesFormsActionsTestCase extends RulesFormsRulesTestCase {
+
+  /**
+   * Defines test information.
+   */
+  public static function getInfo() {
+    return array(
+      'name' => 'Rules forms actions',
+      'description' => 'Tests Rules forms action callbacks.',
+      'group' => 'Rules forms',
+    );
+  }
+
+  /**
+   * Enables modules and logs in the privileged user.
+   */
+  public function setUp() {
+    parent::setUp();
+  }
+
+  /**
+   * Tests callback for Action: Set element title.
+   */
   public function testSetTitleAction() {
     $form = array();
     $form['test'] = array('#type' => 'textfield', '#title' => 'tset');
@@ -130,6 +294,9 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertEqual($form['test']['#title'], 'test');
   }
 
+  /**
+   * Tests callback for Action: Set element description.
+   */
   public function testSetDescriptionAction() {
     $form = array();
     $form['test'] = array('#type' => 'textfield', '#description' => 'tset');
@@ -139,6 +306,9 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertEqual($form['test']['#description'], 'test');
   }
 
+  /**
+   * Tests callback for Action: Hide form element.
+   */
   public function testHideAction() {
     $form = array();
     $form['test'] = array('#type' => 'textfield', '#access' => FALSE);
@@ -148,6 +318,9 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertFalse($form['test']['#access']);
   }
 
+  /**
+   * Tests callback for Action: Disable form element.
+   */
   public function testSetDisabledAction() {
     $form = array();
     $form['test'] = array('#type' => 'textfield', '#disabled' => FALSE);
@@ -157,6 +330,9 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertTrue($form['test']['#disabled']);
   }
 
+  /**
+   * Tests callback for Action: Require form element.
+   */
   public function testSetRequiredAction() {
     $form = array();
     $form['test'] = array('#type' => 'textfield', '#required' => FALSE);
@@ -166,6 +342,9 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertTrue($form['test']['#required']);
   }
 
+  /**
+   * Tests callback for Action: Set multiple value options.
+   */
   public function testSetOptionsAction() {
     $form = array();
     $form['test'] = array('#type' => 'textfield', '#options' => array('first' => 'tset'));
@@ -175,6 +354,9 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertEqual($form['test']['#options'], array('first' => 'test', 'second' => 'tset'));
   }
 
+  /**
+   * Tests callback for Action: Set default value of a form element.
+   */
   public function testSetDefaultAction() {
     $form = array();
     $form['test'] = array('#type' => 'textfield', '#default_value' => 'tset');
@@ -184,6 +366,9 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertEqual($form['test']['#default_value'], 'test');
   }
 
+  /**
+   * Tests callback for Action: Set element weight.
+   */
   public function testSetWeightAction() {
     $form = array();
     $form['test'] = array('#type' => 'textfield', '#weight' => 0);
@@ -193,6 +378,9 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $this->assertEqual($form['test']['#weight'], 20);
   }
 
+  /**
+   * Tests callback for Action: Set element prefix/suffix HTML.
+   */
   public function testSetPrefixSuffixAction() {
     $form = array();
     $form['test'] = array(
@@ -205,6 +393,46 @@ class RulesFormsTestCase extends DrupalWebTestCase {
     $action->executeByArgs(array('form' => $form));
     $this->assertEqual($form['test']['#prefix'], '<div id="test">');
     $this->assertEqual($form['test']['#suffix'], '</div>');
+  }
+
+}
+
+/**
+ * Tests Rules Forms actions.
+ */
+class RulesFormsAPITestCase extends RulesFormsRulesTestCase {
+
+  /**
+   * Defines test information.
+   */
+  public static function getInfo() {
+    return array(
+      'name' => 'API functions',
+      'description' => 'Tests Rules forms API functions.',
+      'group' => 'Rules forms',
+    );
+  }
+
+  /**
+   * Enables modules and logs in the privileged user.
+   */
+  public function setUp() {
+    parent::setUp();
+  }
+
+  /**
+   * Tests _rules_forms_get_element().
+   */
+  public function testGetElement() {
+    // Test retrieving the element.
+    $form = self::$_form;
+    $element_id = 'select:fieldset:select';
+    $element = &_rules_forms_get_element($form, $element_id);
+    $this->assertEqual($element, array('#type' => 'select', '#title' => 'tset select', '#options' => array('first' => 'option1', 'second' => 'option2')));
+
+    // Test the reference.
+    $element['#title'] = 'test select';
+    $this->assertEqual($form['fieldset']['select']['#title'], 'test select');
   }
 
 }
